// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokens should hide zero balance tokens when setting is on 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                nativeID="animatedComponent"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Amount
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "backgroundColor": "#FFFFFF",
                          "flex": 1,
                          "minHeight": 500,
                        }
                      }
                      testID="tokens"
                    >
                      <View>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-ETH"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                useNativeDriver={true}
                              >
                                <Image
                                  fadeIn={true}
                                  onError={[Function]}
                                  onLoadEnd={[Function]}
                                  source={
                                    {
                                      "uri": "eth-logo-new.png",
                                    }
                                  }
                                  style={
                                    [
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                      undefined,
                                      undefined,
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  collapsable={false}
                                  nativeID="animatedComponent"
                                  style={
                                    {
                                      "bottom": 0,
                                      "left": 0,
                                      "opacity": 1,
                                      "position": "absolute",
                                      "right": 0,
                                      "top": 0,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "borderRadius": 12,
                                          "height": 24,
                                          "overflow": "hidden",
                                          "width": 24,
                                        },
                                        {
                                          "backgroundColor": "#eee",
                                        },
                                        undefined,
                                      ]
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Ethereum
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                             ETH
                          </Text>
                        </TouchableOpacity>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-BAT"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 12,
                                    "height": 24,
                                    "overflow": "hidden",
                                    "width": 24,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="token-avatar-image"
                                />
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Bat
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            &lt; 0.00001 BAT
                          </Text>
                        </TouchableOpacity>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "marginTop": 9,
                              "paddingBottom": 30,
                            }
                          }
                        >
                          <TouchableOpacity
                            disabled={false}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                            testID="import-token-button"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#535A61",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "marginBottom": 8,
                                  }
                                }
                              >
                                Don't see your token?
                              </Text>
                               
                              <Text
                                style={
                                  {
                                    "color": "#0376C9",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Import tokens
                              </Text>
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Tokens should render correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                nativeID="animatedComponent"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Amount
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "backgroundColor": "#FFFFFF",
                          "flex": 1,
                          "minHeight": 500,
                        }
                      }
                      testID="tokens"
                    >
                      <View>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-ETH"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                useNativeDriver={true}
                              >
                                <Image
                                  fadeIn={true}
                                  onError={[Function]}
                                  onLoadEnd={[Function]}
                                  source={
                                    {
                                      "uri": "eth-logo-new.png",
                                    }
                                  }
                                  style={
                                    [
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                      undefined,
                                      undefined,
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  collapsable={false}
                                  nativeID="animatedComponent"
                                  style={
                                    {
                                      "bottom": 0,
                                      "left": 0,
                                      "opacity": 1,
                                      "position": "absolute",
                                      "right": 0,
                                      "top": 0,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "borderRadius": 12,
                                          "height": 24,
                                          "overflow": "hidden",
                                          "width": 24,
                                        },
                                        {
                                          "backgroundColor": "#eee",
                                        },
                                        undefined,
                                      ]
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Ethereum
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                             ETH
                          </Text>
                        </TouchableOpacity>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-BAT"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 12,
                                    "height": 24,
                                    "overflow": "hidden",
                                    "width": 24,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="token-avatar-image"
                                />
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Bat
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            &lt; 0.00001 BAT
                          </Text>
                        </TouchableOpacity>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "marginTop": 9,
                              "paddingBottom": 30,
                            }
                          }
                        >
                          <TouchableOpacity
                            disabled={false}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                            testID="import-token-button"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#535A61",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "marginBottom": 8,
                                  }
                                }
                              >
                                Don't see your token?
                              </Text>
                               
                              <Text
                                style={
                                  {
                                    "color": "#0376C9",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Import tokens
                              </Text>
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Tokens should show all balance tokens when hideZeroBalanceTokens setting is off 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                nativeID="animatedComponent"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Amount
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "backgroundColor": "#FFFFFF",
                          "flex": 1,
                          "minHeight": 500,
                        }
                      }
                      testID="tokens"
                    >
                      <View>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-ETH"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                useNativeDriver={true}
                              >
                                <Image
                                  fadeIn={true}
                                  onError={[Function]}
                                  onLoadEnd={[Function]}
                                  source={
                                    {
                                      "uri": "eth-logo-new.png",
                                    }
                                  }
                                  style={
                                    [
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                      undefined,
                                      undefined,
                                      {
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  collapsable={false}
                                  nativeID="animatedComponent"
                                  style={
                                    {
                                      "bottom": 0,
                                      "left": 0,
                                      "opacity": 1,
                                      "position": "absolute",
                                      "right": 0,
                                      "top": 0,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "borderRadius": 12,
                                          "height": 24,
                                          "overflow": "hidden",
                                          "width": 24,
                                        },
                                        {
                                          "backgroundColor": "#eee",
                                        },
                                        undefined,
                                      ]
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Ethereum
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                             ETH
                          </Text>
                        </TouchableOpacity>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-BAT"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 12,
                                    "height": 24,
                                    "overflow": "hidden",
                                    "width": 24,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="token-avatar-image"
                                />
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Bat
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            &lt; 0.00001 BAT
                          </Text>
                        </TouchableOpacity>
                        <TouchableOpacity
                          onLongPress={[Function]}
                          onPress={[Function]}
                          style={
                            {
                              "alignItems": "flex-start",
                              "flex": 1,
                              "flexDirection": "row",
                              "paddingHorizontal": 15,
                              "paddingVertical": 10,
                            }
                          }
                          testID="asset-LINK"
                        >
                          <View
                            style={
                              {
                                "alignSelf": "flex-start",
                              }
                            }
                          >
                            <View>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 12,
                                    "height": 24,
                                    "overflow": "hidden",
                                    "width": 24,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="token-avatar-image"
                                />
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "position": "absolute",
                                  "right": -4,
                                  "top": -4,
                                }
                              }
                              testID="badge-base"
                            >
                              <View
                                style={
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 16,
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source="eth-logo-new.png"
                                  style={
                                    {
                                      "flex": 1,
                                      "height": undefined,
                                      "width": undefined,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "justifyContent": "center",
                                "marginLeft": 20,
                              }
                            }
                            testID="balance"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Link
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#535A61",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              &lt; $0.01
                            </Text>
                          </View>
                          <Text
                            style={
                              {
                                "color": "#24272A",
                                "fontFamily": "Euclid Circular B",
                                "fontSize": 16,
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            0 LINK
                          </Text>
                        </TouchableOpacity>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "marginTop": 9,
                              "paddingBottom": 30,
                            }
                          }
                        >
                          <TouchableOpacity
                            disabled={false}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              }
                            }
                            testID="import-token-button"
                          >
                            <Text
                              style={
                                {
                                  "color": "#24272A",
                                  "fontFamily": "Euclid Circular B",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#535A61",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "marginBottom": 8,
                                  }
                                }
                              >
                                Don't see your token?
                              </Text>
                               
                              <Text
                                style={
                                  {
                                    "color": "#0376C9",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Import tokens
                              </Text>
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
